--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,10 @@ classifiers = [
   "Intended Audience :: Science/Research",
   "Topic :: Scientific/Engineering :: Chemistry",
 ]
-dependencies = []
+dependencies = [
+  "pydantic>=2.7,<3",
+  "PyYAML>=6.0.1,<7"
+]
 
 [project.optional-dependencies]
 dev = [
@@ -31,7 +34,10 @@ dev = [
   "pytest==8.3.2",
   "pytest-cov==5.0.0",
   "pre-commit==3.7.1",
+  "types-PyYAML>=6.0.12,<7",
 ]
+
+
 
 [project.scripts]
 moldis = "moldis.cli:main"
@@ -63,6 +69,7 @@ check_untyped_defs = false
 disallow_untyped_defs = false
 show_error_context = true
 pretty = true
+plugins = ["pydantic.mypy"]
 
 [tool.pytest.ini_options]
 minversion = "8.0"
