--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ classifiers = [
   "Topic :: Scientific/Engineering :: Chemistry",
 ]
 dependencies = [
+  "numpy>=1.26,<2",
   "pydantic>=2.7,<3",
   "PyYAML>=6.0.1,<7"
 ]
